# gelatin

./: .gitignore  .sosrc  .travis.yml  Example.hs  Example.old.hs  Gelatin.hs  LICENSE  README.md  cabal.project  gelatin.cabal  stack.yaml  test.hs
Gelatin/: Color.hs  Compiling.hs  Core.hs  CoreOld.hs  Geometry.hs  Render.hs  Rendering.hs  ShaderCommands.hs  Shaders.hs  TextureCommands.hs  Transform.hs  Two.hs  Window.hs
Gelatin/Compiling/: IO.hs
Gelatin/Core/: Compiling.hs  Texture.hs  TextureCommands.hs  Types.hs
Gelatin/Geometry/: Triangulation.hs  Types.hs
Gelatin/Rendering/: Attributes.hs  Core.hs  OpenGL.hs  String.hs  Two.hs  Uniforms.hs
Gelatin/Shaders/: Core.hs  GLSL.hs  Parser.hs  Simple2dColorShader.hs  Simple2dTextureShader.hs  SimpleColorShader.hs  SimpleTextureShader.hs
Gelatin/Two/: Compiling.hs  Types.hs
app/: Main.hs
gelatin/: .sosrc  LICENSE  README.md  gelatin.cabal  stack.yaml  stack80-ghcjs.yaml
gelatin-core/: README.md  gelatin-core.cabal  stack.yaml
gelatin-core/shaders/: bezier.frag  bezier.vert  frag.glsl  vert.glsl
gelatin-core/src/: Example.hs  Render.hs  Renderer.hs  Shader.hs
gelatin-core/src/Data/Hashable/: Vector.hs
gelatin-core/src/Examples/: ClipTexture.hs  Masking.hs  PolylineTest.hs  PolylineWinding.hs  Text.hs
gelatin-core/src/Gelatin/: Core.hs
gelatin-core/src/Gelatin/Core/: Bezier.hs  Bounds.hs  Color.hs  Common.hs  Fill.hs  Font.hs  Geometry.hs  Line.hs  Path.hs  Primitives.hs  PrimitivesOld.hs  Render.hs  Rendering.hs  Shader.hs  Shape.hs  Stroke.hs  Transform.hs  Triangle.hs
gelatin-core/src/Gelatin/Core/Render/: Font.hs  Geometrical.hs  Polylines.hs  Types.hs
gelatin-core/src/Gelatin/Core/Rendering/: Font.hs  Geometrical.hs  Types.hs
gelatin-core/src/Gelatin/Core/Triangulation/: EarClipping.hs
gelatin-core/src/Render/: Font.hs  Geometrical.hs  IO.hs  Types.hs
gelatin-core/src/Renderer/: Font.hs  Types.hs
gelatin-core/src/Shader/: Internal.hs
gelatin-core/src/Triangulation/: Common.hs  EarClipping.hs  KET.hs
gelatin-example/: .sosrc  README.md  gelatin-example.cabal  stack.yaml
gelatin-example/src/: Main.hs
gelatin-freetype2/: LICENSE  gelatin-freetype2.cabal  sosrc-dev  stack.yaml
gelatin-freetype2/app/: Main.hs
gelatin-freetype2/src/: Lib.hs
gelatin-freetype2/src/Gelatin/: FreeType2.hs  Freetype2.hs
gelatin-freetype2/src/Gelatin/FreeType2/: Internal.hs  Utils.hs
gelatin-freetype2/src/Gelatin/Freetype2/: Internal.hs  Utils.hs
gelatin-fruity/: gelatin-fruity.cabal  stack.yaml
gelatin-fruity/src/Gelatin/: Fruity.hs
gelatin-gl/: .sosrc  README.md  gelatin-gl.cabal  stack.yaml  stack80-ghcjs.yaml
gelatin-gl/app/: Example.hs
gelatin-gl/shaders/: 2d.frag  2d.vert  bezier.frag  bezier.vert  mask.frag  mask.vert  master.frag  projected-line.frag  projected-line.vert  simple2d.frag  simple2d.vert
gelatin-gl/src/Gelatin/: GL.hs
gelatin-gl/src/Gelatin/GL/: Common.hs  Compiler.hs  Picture.hs  Primitives.hs  Renderer.hs  Shader.hs  TH.hs
gelatin-gl/src/Gelatin/GL/Renderer/: Common.hs  R2.hs  R3.hs
gelatin-glfw/: gelatin-glfw.cabal  stack.yaml
gelatin-glfw/src/Gelatin/: GLFW.hs
gelatin-glfw/src/Gelatin/GL/: Renderer.hs  Shader.hs
gelatin-old/: Example.hs  Gelatin.hs  README.md  gelatin.cabal
gelatin-old/Gelatin/: Core.hs  Transform.hs  Two.hs  Window.hs
gelatin-old/Gelatin/Core/: Compiling.hs  ShaderCommands.hs  Types.hs
gelatin-old/Gelatin/Geometry/: Triangulation.hs  Types.hs
gelatin-old/Gelatin/Shaders/: Core.hs  Simple2dColorShader.hs  SimpleColorShader.hs  StrokeShader.hs
gelatin-old/Gelatin/Two/: Compiling.hs  Types.hs
gelatin-picture/: .sosrc  LICENSE  README.md  gelatin-picture.cabal  stack.yaml
gelatin-picture/src/Gelatin/: Picture.hs  PicturePrimitives.hs
gelatin-sdl2/: .sosrc  README.md  gelatin-sdl2.cabal  sosrc-dev  stack.yaml
gelatin-sdl2/app/: Main.hs
gelatin-sdl2/src/Gelatin/: SDL2.hs
gelatin-shaders/: .sosrc  README  gelatin-shaders.cabal  stack.yaml
gelatin-shaders-gl/: LICENSE  README  gelatin-shaders-gl.cabal  stack.yaml
gelatin-shaders-gl/app/: Main.hs
gelatin-shaders-gl/shaders/: 2d.vert  color.frag  playground.frag  playground.vert  red.frag
gelatin-shaders-gl/shaders/bookofshaders/: 05.frag
gelatin-shaders-gl/src/Gelatin/Shaders/: Error.hs  GL.hs  TH.hs
gelatin-shaders/shaders/: simple2d.frag  simple2d.vert  simple2dwebgl.frag  simple2dwebgl.vert  simple3d.frag  simple3d.vert
gelatin-shaders/src/Gelatin/: Shaders.hs
gelatin-shaders/src/Gelatin/Shaders/: Common.hs  Simple2D.hs  Simple3D.hs  System.hs  TypeLevel.hs  `
gelatin-webgl/: gelatin-webgl.cabal  stack.yaml
gelatin-webgl/app/: ImageData.hs  Main.hs
gelatin-webgl/shaders/: simple2dwebgl.frag
gelatin-webgl/src/Gelatin/: WebGL.hs
gelatin-webgl/src/Gelatin/WebGL/: Common.hs  Renderer.hs  Shaders.hs
gelatin/app/: Example.hs
gelatin/shaders/: bezier.frag  line.frag  line.vert  mask.frag  mask.vert  projected-line.frag
gelatin/src/: Example.hs  Gelatin.hs
gelatin/src/Examples/: AdaptiveBezierSubdivision.hs  ClipTexture.hs  ExpandedPolylines.hs  Masking.hs  PolylineTest.hs  PolylineWinding.hs  Text.hs
gelatin/src/Gelatin/: Compiler.hs  Core.hs  Picture.hs
gelatin/src/Gelatin/Core/: Bezier.hs  Bounds.hs  Color.hs  Font.hs  Path.hs  Polyline.hs  Rendering.hs  Shader.hs  Stroke.hs  Transform.hs  Triangle.hs  Utils.hs
gelatin/src/Gelatin/Core/Rendering/: Bezier.hs  Font.hs  Geometrical.hs  Polylines.hs  Shape.hs  Transform.hs  Types.hs
gelatin/src/Gelatin/Core/Triangulation/: Common.hs  EarClipping.hs  KET.hs
gelatin/src/Gelatin/Picture/: Extras.hs  Internal.hs  Raw.hs  Shapes.hs
jello-core/: jello-core.cabal
jello-core/src/Jello/: Core.hs
jello-glfw/: jello-glfw.cabal
jello-glfw/src/Jello/: GLFW.hs
