name:                gelatin-core
version:             0.0.0.1
synopsis:            Core of the gelatin rendering system.
description:         Shared types and computations for the gelatin rendering
                     system.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Data.Hashable.Vector,
                       Gelatin.Core.Bezier,
                       Gelatin.Core.Bounds,
                       Gelatin.Core.Color,
                       Gelatin.Core.Fill,
                       Gelatin.Core.Font,
                       Gelatin.Core.Line,
                       Gelatin.Core.Path,
                       --Gelatin.Core.Primitives,
                       Gelatin.Core.Stroke,
                       Gelatin.Core.Transform,
                       Gelatin.Core.Triangle,
                       Gelatin.Core
  other-extensions:    MultiParamTypeClasses, FlexibleInstances
  build-depends:       base       >=4.8 && <4.9,
                       bytestring,
                       linear     >= 1.20 && < 1.21,
                       hashable   >= 1.2 && < 1.3,
                       containers >= 0.5 && < 0.6,
                       free       >= 4.12 && < 4.13,
                       vector     >= 0.11 && < 0.12
  hs-source-dirs:      src
  default-language:    Haskell2010

