name:                gelatin-example
version:             0.0.0.1
synopsis:            A simple gelatin example.
description:         Please see README.md
homepage:            https://github.com/schell/gelatin#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@synapsegroup.com
copyright:           2016 Schell Scivally
category:            Graphics
build-type:          Simple
data-files:          assets/*.jpg, assets/*.ttf, assets/*.txt
cabal-version:       >=1.10

executable gelatin-example
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_gelatin_example
  ghc-options:         -rtsopts
  build-depends:       base
                     , gelatin
                     , gelatin-sdl2
                     , gelatin-fruity
                     , gelatin-freetype2
                     , sdl2
                     --, halive
                     , FontyFruity
                     , filepath
                     , directory
                     , text
                     , linear
                     , lens
                     , hashable
                     , bytestring
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin
