name:                gelatin-example
version:             0.0.0.1
synopsis:            A simple gelatin example.
description:         A simple gelatin example. Please see README.md
homepage:            https://github.com/schell/gelatin#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@synapsegroup.com
copyright:           2016 Schell Scivally
category:            Graphics
build-type:          Simple
data-files:          assets/*.jpg, assets/*.ttf, assets/*.txt
cabal-version:       >=1.10

executable gelatin-example
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_gelatin_example
  ghc-options:         -rtsopts
  build-depends:       base                  >=4.8 && <4.11
                     , either                >=4.5 && <4.6
                     , gelatin               >=0.0 && <0.1
                     , gelatin-sdl2          >=0.0 && <0.1
                     , gelatin-fruity        >=0.1 && <0.2
                     , gelatin-freetype2     >=0.0 && <0.1
                     , sdl2                  >=2.1 && <2.4
                     , FontyFruity           >=0.5 && <0.6
                     , filepath              >=1.4 && <1.5
                     , directory             >=1.2 && <1.4
                     , text                  >=1.2 && <1.3
                     , linear                >=1.20 && <1.21
                     , lens                  >=4.15 && <4.16
                     , hashable              >=1.2 && <1.3
                     , bytestring            >=0.10 && <0.11
                     , vector                >=0.12 && <0.13
                     , transformers          >=0.4 && <0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin
