name:                gelatin-example
version:             0.1.0.0
synopsis:            A simple gelatin example.
description:         A simple gelatin example. Please see README.md
homepage:            https://github.com/schell/gelatin#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@synapsegroup.com
copyright:           2016 Schell Scivally
category:            Graphics
build-type:          Simple
data-files:          assets/*.jpg, assets/*.ttf, assets/*.txt
cabal-version:       >=1.10
stability:           experimental

executable gelatin-example
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_gelatin_example
  ghc-options:         -rtsopts
  build-depends:       base >=4.8 && < 4.12
                     , bytestring            >=0.10    && <0.11
                     , directory             >=1.2     && <1.4
                     , filepath              >=1.4     && <1.5
                     , FontyFruity           >=0.5     && <0.6
                     , gelatin               >=0.1     && <0.2
                     , gelatin-freetype2     >=0.1     && <0.2
                     , gelatin-fruity        >=0.1     && <0.2
                     , gelatin-sdl2          >=0.1     && <0.2
                     , lens                  >=4.15    && <4.17
                     , linear                >=1.20    && <1.21
                     , mtl                   >= 2.2    && < 2.3
                     , sdl2                  >=2.4.0.1 && <2.5
                     , text                  >=1.2     && <1.3
                     , vector                >=0.12    && <0.13
                     , transformers          >=0.4     && <0.6
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin
