name:                gelatin-freetype2
version:             0.1.0.0
synopsis:            FreeType2 based text rendering for the gelatin realtime
                     rendering system.
description:         FreeType2 based text rendering for the gelatin realtime
                     rendering system. Please see README.md.
homepage:            https://github.com/schell/gelatin/gelatin-freetype2#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
stability:           experimental

library
  hs-source-dirs:      src
  exposed-modules:     Gelatin.FreeType2.Internal
                     , Gelatin.FreeType2.Utils
                     , Gelatin.FreeType2

  build-depends:       base               >=4.8 && <4.11
                     , gelatin            >=0.1 && <0.2
                     , gelatin-gl         >=0.1 && <0.2
                     , freetype2          >=0.1 && <0.2
                     , transformers       >=0.4 && <0.6
                     , mtl                >=2.2 && <2.3
                     , containers         >=0.5 && <0.6
                     , either             >=4.4 && <4.6

  default-language:    Haskell2010

--executable gelatin-freetype2-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base >=4.8 && <4.11
--                     , gelatin
--                     , gelatin-freetype2
--                     , gelatin-sdl2
--                     , gelatin-gl
--                     , freetype2
--                     , sdl2
--                     , halive
--                     , transformers
--                     , mtl
--                     , containers
--                     , pretty-show
--                     , vector
--
--  default-language:    Haskell2010

test-suite gelatin-freetype2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                  >=4.8 && <4.11
                     , gelatin-freetype2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-freetype2
