name:                gelatin-fruity
version:             0.1.0.0
synopsis:            Gelatin's support for TTF font rendering, using FontyFruity.
description:         Gelatin's support for TTF font rendering, using FontyFruity.
                     Please see README.md
homepage:            https://github.com/schell/gelatin-fruity#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Gelatin.Fruity

  build-depends:       base                >=4.8 && <4.11
                     , gelatin             >=0.0 && <0.1
                     , FontyFruity         >=0.5 && <0.6
                     , vector              >=0.12 && <0.13
                     , linear              >=1.20 && <1.21

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-fruity
