name:                gelatin-fruity
version:             0.1.0.0
synopsis:            Gelatin's support for rendering TTF outlines, using FontyFruity.
description:         Gelatin's support for rendering TTF outlines, using FontyFruity.
                     Using FontyFruity gelatin can render smooth font geometry without
                     freetype.
homepage:            https://github.com/schell/gelatin-fruity#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@takt.com
copyright:           Schell Scivally
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Gelatin.Fruity

  build-depends:       base                >=4.8  && <4.11
                     , gelatin             >=0.1  && <0.2
                     , FontyFruity         >=0.5  && <0.6
                     , vector              >=0.12 && <0.13
                     , linear              >=1.20 && <1.21

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-fruity
