name:                gelatin-gl
version:             0.0.0.1
synopsis:            OpenGL rendering routines for the gelatin-picture graphics
                     EDSL.
description:         This package provides most of a backend to
                     gelatin-picture, a DSL for decribing two dimensional
                     pictures.
homepage:            https://github.com/schell/gelatin/gelatin-gl
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-files:          shaders/*.frag,
                     shaders/*.vert


library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.GL,
                       Gelatin.GL.Picture,
                       Gelatin.GL.Shader,
                       Gelatin.GL.Shader.Simple2D,
                       Gelatin.GL.Shader.Simple3D,
                       Gelatin.GL.Renderer.Common,
                       Gelatin.GL.Renderer.R2,
                       Gelatin.GL.Renderer.R3,
                       Gelatin.GL.TH
  build-depends:       base            >= 4.6     && < 5.0
                     , bytestring
                     , gelatin
                     , gelatin-shaders
                     , linear
                     , gl
                     , JuicyPixels
                     , bytestring
                     , vector
                     , directory
                     , filepath
                     , transformers
                     , mtl
                     , either
                     , containers
                     , lens
                     , template-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

executable gelatin-gl-example
  ghc-options:         -Wall

  build-depends:       base >= 4.6 && <5.0
                     , gelatin
                     , gelatin-gl
                     , linear
                     , lens
                     --, halive
                     , vector
                     , mtl

  hs-source-dirs:      app
  main-is:             Example.hs
