name:                gelatin-gl
version:             0.1.0.0
synopsis:            OpenGL rendering routines for the gelatin-picture graphics
                     EDSL.
description:         This package provides most of a backend to
                     gelatin-picture, a DSL for decribing two dimensional
                     pictures.
homepage:            https://github.com/schell/gelatin/gelatin-gl
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.GL,
                       Gelatin.GL.Renderer,
                       Gelatin.GL.Compiler,
                       Gelatin.GL.Shader,
                       Gelatin.GL.Common,
                       Gelatin.GL.TH
  build-depends:       base                >=4.8 && <4.11
                     , bytestring          >=0.10 && <0.11
                     , gelatin             >=0.1 && <0.2
                     , gelatin-shaders     >=0.1 && <0.2
                     , linear              >=1.20 && <1.21
                     , gl                  >=0.7 && <0.9
                     , JuicyPixels         >=3.2 && <3.3
                     , vector              >=0.12 && <0.13
                     , directory           >=1.2 && <1.4
                     , filepath            >=1.4 && <1.5
                     , transformers        >=0.4 && <0.6
                     , mtl                 >=2.2 && <2.3
                     , either              >=4.4 && <4.6
                     , containers          >=0.5 && <0.6
                     , lens                >=4.15 && <4.16
                     , template-haskell    >=2.10 && <2.13

  hs-source-dirs:      src
  default-language:    Haskell2010

executable gelatin-gl-example
  ghc-options:         -Wall

  build-depends:       base                >=4.8 && <4.11
                     , gelatin             >=0.1 && <0.2
                     , gelatin-gl
                     , linear              >=1.20 && <1.21
                     , lens                >=4.15 && <4.16
                     , vector              >=0.12 && <0.13
                     , mtl                 >=2.2 && <2.3

  hs-source-dirs:      app
  main-is:             Example.hs
  default-language:    Haskell2010
