name:                gelatin-glfw
version:             0.0.0.1
synopsis:            A GLFW backend for the gelatin-picture graphics DSL.
description:         Using GLFW this package provides a backend to
                     gelatin-picture, a DSL for decribing two dimensional
                     pictures. For writing full blown graphical applications
                     please see jello-glfw.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Gelatin.GLFW
  build-depends:       base       >= 4.6     && < 4.11
                     , linear     >= 1.20
                     , GLFW-b     >= 1.4
                     , gelatin-gl >= 0.0
                     , bytestring >= 0.10
                     , vector     >= 0.11
                     , directory  >= 1.2
                     , hashable   >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010

