name:                gelatin-picture
version:             0.0.0.1
synopsis:            A Haskell drawing API for creating two dimensional pictures.
description:         Inspired by Sigbjorn Finne's "A Language of Pictures" and
                     Twinside's Rasterific, gelatin-picture is a DSL for
                     describing two dimensional pictures. Pictures can be
                     compiled down to primitives and rendered using a backend.
                     Currently the only backend available is gelatin-glfw.
                     For writing full blown graphical applications please check
                     out jello-glfw.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell.scivally@synapsegroup.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.Picture
  other-extensions:    GADTs,
                       TypeSynonymInstances,
                       TypeFamilies,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       TupleSections
  build-depends:       base         >=4.6 && <5.0
                     , free         >=4.12
                     , mtl          >=2.2
                     , gelatin-core >=0.0.0.1
                     , linear       >=1.20
                     , hashable     >=1.2
                     , filepath     >=1.4
                     , vector       >=0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

