name:                gelatin-sdl2
version:             0.1.0.0
synopsis:            An SDL2 backend for the gelatin renderer.
description:         Using SDL2 this package provides a backend to
                     gelatin, an EDSL rendering pictures.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@takt.com
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10
data-files:          img/*.png
stability:           experimental

library
  exposed-modules:     Gelatin.SDL2
  ghc-options:         -Wall
  build-depends:       base                 >=4.8 && <4.11
                     , sdl2                 >=2.1 && <2.4
                     , gelatin-gl           >=0.1 && <0.2
                     , mtl                  >=2.2 && <2.3
                     , transformers         >=0.4 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable gelatin-sdl2-example
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_gelatin_sdl2
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base                 >=4.8 && <4.11
                     , gelatin-sdl2
                     , sdl2                 >=2.1 && <2.4
                     , filepath             >=1.4 && <1.5
                     , either               >=4.4 && <4.6
