name:                gelatin-shaders-gl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/schell/gelatin-shaders-gl#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2016 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          shaders/*.vert
                   , shaders/*.frag

library
  hs-source-dirs:      src
  exposed-modules:     Gelatin.Shaders.GL
                     , Gelatin.Shaders.TH
                     , Gelatin.Shaders.Error
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , filepath
                     , gelatin
                     , gelatin-shaders
                     , gl
                     , mtl
                     , template-haskell
                     , vector

  default-language:    Haskell2010

executable jelloshader
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , either
                     , filepath
                     , fsnotify
                     , gelatin-shaders
                     , gelatin-shaders-gl
                     , gl
                     , halive
                     , linear
                     , optparse-applicative
                     , sdl2
                     , stm
                     , time
                     , vector

  default-language:    Haskell2010

test-suite gelatin-shaders-gl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gelatin-shaders-gl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-shaders-gl
