name:                gelatin-shaders
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/schell/gelatin-shaders#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
library
  hs-source-dirs:      src
  exposed-modules:     Gelatin.Shaders.Common
                     , Gelatin.Shaders.TypeLevel
                     , Gelatin.Shaders
  other-modules:       Paths_gelatin_shaders
  build-depends:       base >= 4.7 && < 5
                     , gelatin
                     , bytestring
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-shaders
