name:                gelatin-shaders
version:             0.1.0.0
synopsis:            Gelatin's OpenGL shaders.
description:         Gelatin's OpenGL shaders. Please see README.md
homepage:            https://github.com/schell/gelatin-shaders#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          shaders/*.frag,
                     shaders/*.vert

library
  hs-source-dirs:      src
  exposed-modules:     Gelatin.Shaders.Common
                     , Gelatin.Shaders.Simple2D
                     , Gelatin.Shaders.TypeLevel
                     , Gelatin.Shaders
  other-modules:       Paths_gelatin_shaders
  build-depends:       base >= 4.8 && < 4.11
                     , gelatin
                     , bytestring
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-shaders
