name:                gelatin-webgl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/schell/gelatin-webgl#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web, Graphics
build-type:          Simple
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Gelatin.WebGL
                     , Gelatin.WebGL.Common
                     , Gelatin.WebGL.Shaders
                     , Gelatin.WebGL.Renderer

  build-depends:       base >= 4.7 && < 5
                     , gelatin
                     , gelatin-shaders
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-dom-jsffi
                     , mtl
                     , either
                     , async
                     , vector
                     , bytestring
                     , stm

  default-language:    Haskell2010

executable gelatin-webgl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gelatin
                     , gelatin-webgl
                     , gelatin-shaders
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-dom-jsffi
                     , transformers
                     , either
                     , async
                     , vector
                     , stm
                     , bytestring

  default-language:    Haskell2010

test-suite gelatin-webgl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gelatin-webgl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-webgl
